Fix reset button rendering on iOS, minor refactoring

--- a/hyperstars.css
+++ b/hyperstars.css
@@ -43,7 +43,7 @@ button.hyperstars-reset {
 
 button.hyperstars-reset>span {
   display: inline;
-  font-size: 0.4em;
+  font-size: 0.5em;
   line-height: 1em;
   float: left;
 }
